Fixed menu on mobile

--- a/resurse/css/style_400.css
+++ b/resurse/css/style_400.css
@@ -31,6 +31,8 @@ ul.menu {
 ul.menu>li {
     background-color: #ffffff;
     color: #1D1313;
+    width: 100%;
+    line-height: 3rem;
 }
 
 /* ---------------------------------- FOOTER ---------------------------------- */
@@ -45,4 +47,53 @@ footer {
 
 .footer {
     padding-top: 1rem;
+}
+
+/* ---------------------------------- COLOANE ---------------------------------- */
+.col-sm-1 {
+    width: 8.33% !important;
+}
+
+.col-sm-2 {
+    width: 16.66% !important;
+}
+
+.col-sm-3 {
+    width: 25% !important;
+}
+
+.col-sm-4 {
+    width: 33.33% !important;
+}
+
+.col-sm-5 {
+    width: 41.66% !important;
+}
+
+.col-sm-6 {
+    width: 50% !important;
+}
+
+.col-sm-7 {
+    width: 58.33% !important;
+}
+
+.col-sm-8 {
+    width: 66.66% !important;
+}
+
+.col-sm-9 {
+    width: 75% !important;
+}
+
+.col-sm-10 {
+    width: 83.33% !important;
+}
+
+.col-sm-11 {
+    width: 91.66% !important;
+}
+
+.col-sm-12 {
+    width: 100% !important;
 }
